# cutest-disk-tree

./: .gitignore  .tauri-public-key  .tauri-updater-key.pub  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/__tests__/: DiskUsageSidebar.test.tsx  DiskUsageView.test.tsx  FileFindingView.test.tsx  diskTree.test.ts  setup.ts  utils.test.ts
frontend/src/components/: DiskUsageSidebar.tsx  SunburstChart.tsx  TitleBar.tsx
frontend/src/components/file-finding/: FileTable.tsx  FilterBar.tsx  FolderList.tsx  IndexingControls.tsx  SearchBar.tsx
frontend/src/components/ui/: button.tsx  table.tsx
frontend/src/utils/: diskTree.ts
frontend/src/views/: DiskUsageView.tsx  FileFindingView.tsx
frontend/src/views/FileFindingView/: FindResultsTable.tsx
mft-helper/: Cargo.toml  README.md
mft-helper/src/: main.rs  ntfs.rs
scripts/: build-all-platforms.sh  gen-icon.cjs  generate-latest-json.cjs  patch-updater-config.cjs  release.sh
src/: db.rs  lib.rs  main.rs  tests.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search_tests.rs  tests.rs
src/core/: folder_sizes.rs  mod.rs  search_category.rs
src/core/file_updating/: README.md  mod.rs  reconciler.rs  tests.rs  watcher.rs
src/core/file_updating/reconciler/: tests.rs
src/core/file_updating/watcher/: tests.rs
src/core/indexing/: compressed_text_index.rs  mod.rs  ngram.rs  sqlite.rs  suffix.rs  watcher.rs
src/core/indexing/compressed_text_index/: tests.rs
src/core/indexing/ngram/: tests.rs
src/core/indexing/suffix/: tests.rs
src/core/scanning/: ignore_scanner.rs  jwalk.rs  lolcate.rs  mod.rs  ntfs.rs  utils.rs  walkdir.rs
src/db/: db.rs  migrations.rs  mod.rs
src/logging/: debug_log.rs  mod.rs
tests/: aggregation_tests.rs  db_e2e.rs  db_tests.rs  migration_tests.rs  scanner_tests.rs  smoke.rs  tree_tests.rs
