[package]
name = "cutest-disk-tree"
version = "0.1.0"
edition = "2021"
description = "Cross-platform disk usage and duplicate-file analyzer"

[dependencies]
walkdir = "2.4"
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
win-file-id = "0.1"

[[bin]]
name = "cutest-disk-tree"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
