[package]
name = "cutest-disk-tree"
version = "0.1.0"
edition = "2021"
description = "Cross-platform disk usage and duplicate-file analyzer"

[dependencies]
walkdir = "2.4"
jwalk = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
rusqlite_migration = "1.3"
nucleo = "0.5"
ignore = "0.4"
lz4_flex = "0.12"
suffix = "1"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
win-file-id = "0.1"
usn-journal-rs = "0.4"

[[bin]]
name = "cutest-disk-tree"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
